<resources>
    <string name="app_name">FirstStep</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_hint">Enter the city here</string>
    <string name="upload">upload</string>
    <string name="user">add user for test perpouse</string>
    <string name="retrive">retrive</string>
    <string name="champers">chompers number : </string>
    <string name="size">total area</string>
    <string name="area">total area</string>
    <string name="m2">m2</string>
    <string name="hint">hint</string>
</resources>
